--- a/src/blocks/page-footer/page-footer.html
+++ b/src/blocks/page-footer/page-footer.html
@@ -6,7 +6,7 @@
 
 -->
 
-<footer class="page-footer" role="contentinfo" style="background-image: url(../img/intro-bg.jpg);">
+<footer class="page-footer" role="contentinfo" style="background-image: url(img/intro-bg.jpg);">
   <div class="container">
     <div class="page-footer__top">
       <span class="logo">
