--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
 
       <main role="main">
 
-        <section class="intro" style="background-image: url(../img/intro-bg.jpg);">
+        <section class="intro" style="background-image: url(img/intro-bg.jpg);">
           <div class="intro__title">
             <div class="circle"></div>
             <div class="white-text">Turn your</div>
@@ -187,6 +187,9 @@
                     <a href="#" class="btn btn--main">Get proposal</a>
                   </div>
                 </div>
+              </div>
+              <div class="offer__img-wrap">
+                <img src="img/offer-img.png" alt="">
               </div>
             </div>
           </div>
